# noto-font-windows31j

./: README.md  pyproject.toml
src/: main.py
