[tool.poetry]
name = "src"
version = "0.1.0"
description = "Customize Google Fonts to the Windows-31J character set to reduce size."
authors = ["mochisue <motoki32925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fonttools = "^4.27.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
windows31j_noto_font = "src.main:main"
